Bug 1325317. Part 1 - move StopMediaSink() out of MediaDecoderStateMachine::Reset(). r=kikuo

MozReview-Commit-ID: 6Bso8uxM7Ee